--- a/.github/ISSUE_TEMPLATE/feature_idea.yml
+++ b/.github/ISSUE_TEMPLATE/feature_idea.yml
@@ -1,5 +1,5 @@
 name: 💡 Feature idea
-description: Idea or request for some feature on the GovTool roadmap
+description: Idea or request for some feature on the toolkit roadmap
 title: "💡 "
 labels: ["💡 Feature idea"]
 body:
