--- a/.github/workflows/build-and-lint.yml
+++ b/.github/workflows/build-and-lint.yml
@@ -30,6 +30,10 @@ jobs:
         run: npm run lint
         working-directory: ./src
 
+      - name: Run tests
+        run: npm run test
+        working-directory: ./src
+
       - name: Build application
         run: npm run build
         working-directory: ./src
