--- a/.github/ISSUE_TEMPLATE/feature_idea.yml
+++ b/.github/ISSUE_TEMPLATE/feature_idea.yml
@@ -8,6 +8,19 @@ body:
       value: |
         ## 🌟 **Thank you for contributing!**
 
+  - type: dropdown
+    id: area
+    attributes:
+      label: Area
+      description: What part of the toolkit does this feature affect?
+      options:
+        - Transaction inspection
+        - Metadata inspection
+        - On-chain data viewing
+        - Not sure
+    validations:
+      required: false
+
   - type: textarea
     id: what
     attributes:
