add workflow to label new issues

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -21,6 +21,7 @@ body:
         - Transaction inspection
         - Rationale metadata inspection
         - On-chain data viewing
+        - Top level - all areas
         - Not sure
     validations:
       required: false
