--- a/.github/ISSUE_TEMPLATE/feature_idea.yml
+++ b/.github/ISSUE_TEMPLATE/feature_idea.yml
@@ -17,6 +17,7 @@ body:
         - Transaction inspection
         - Rationale metadata inspection
         - On-chain data viewing
+        - Top level - all areas
         - Not sure
     validations:
       required: false
