--- a/src/.env.example
+++ b/src/.env.example
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_REST_IPFS_GATEWAY=ipfs.io/ipfs/,azure-defiant-clam-678.mypinata.cloud/ipfs
+NEXT_PUBLIC_REST_IPFS_GATEWAY=ipfs.io/ipfs/,gateway.pinata.cloud/ipfs/,w3s.link/ipfs/
