--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,18 +1,18 @@
-FROM node:20.18 AS build-stage
-ARG NEXT_PUBLIC_REST_IPFS_GATEWAY='ipfs.io/ipfs/'
-ENV NEXT_PUBLIC_REST_IPFS_GATEWAY=$NEXT_PUBLIC_REST_IPFS_GATEWAY
+FROM node:20.18-slim AS build-stage
 WORKDIR /app
-# Copy package.json and package-lock.json
+
 COPY package*.json ./
-# Install dependencies
+
 RUN npm install --silent
-# Copy the rest of the project files
+
 COPY . .
-# Build the React app
+
 RUN npm run build
 
 
-FROM node:20.18
+FROM node:20.18-slim
+ARG NEXT_PUBLIC_REST_IPFS_GATEWAY='ipfs.io/ipfs/,gateway.pinata.cloud/ipfs/,w3s.link/ipfs/'
+ENV NEXT_PUBLIC_REST_IPFS_GATEWAY=${NEXT_PUBLIC_REST_IPFS_GATEWAY}
 WORKDIR /app
 COPY --from=build-stage /app ./
 EXPOSE 3000
