--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,4 +1,6 @@
 FROM node:20.18-slim AS build-stage
+ARG NEXT_PUBLIC_REST_IPFS_GATEWAY='ipfs.io/ipfs/,gateway.pinata.cloud/ipfs/,w3s.link/ipfs/'
+ENV NEXT_PUBLIC_REST_IPFS_GATEWAY=${NEXT_PUBLIC_REST_IPFS_GATEWAY}
 WORKDIR /app
 
 COPY package*.json ./
